--- a/client/src/Components/TimeTable/style.css
+++ b/client/src/Components/TimeTable/style.css
@@ -1,11 +1,9 @@
 #timetable {
     display: flex;
     justify-content: center;
-    /* background-color: ivory; */
-    font-weight: bold;
     font-size: 1em;
-    max-width: 80vw;
-    max-height: 80vh;
+    max-width: 80%;
+    max-height: 80%;
     margin-top: 10vh;
     margin-left: 10vw;
 }
@@ -23,6 +21,7 @@
   padding: 30px 10px 0px 10px ;
   border: solid black 1px;
   border-right: none;
+  border-radius: 10px 0px 0px 10px;
 }
   
 #days>*{
@@ -47,6 +46,7 @@
   letter-spacing: 0.4px;
   border-bottom: solid black 1px;
   height: 30px;
+  border-radius: 0px 10px 0px 0px;
   /* gap: 3em; */
 }
 
@@ -61,7 +61,17 @@
   display: grid;
   max-height: 80vh;
   background-color: ivory;
+  border-radius: 0px 0px 10px 0px;
+  border: solid black 2px;
+  overflow: hidden;
 }
+
+#content,
+#times,
+#days{
+  box-shadow: 10px 10px 5px black;
+}
+
 .box {
   border: solid black 1px;
   text-align: center;
